adding withdraw and deposit buttons to vault ui

--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -213,7 +213,7 @@
     {
       "data": {
         "stringId": 356,
-        "text": "View on polygonscan"
+        "text": "View on PolygonScan"
       }
     },
     {
